--- a/qphotosupps/volume8/image22.html
+++ b/qphotosupps/volume8/image22.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image21.html">Back<BR>21/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume8/image22.jpg"><IMG
 			 SRC="../images/normal/volume8/image22.jpg" WIDTH="650" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"></TD> 
 		</TR> 
 		<TR> 
