--- a/qphotosupps/volume6/image07.html
+++ b/qphotosupps/volume6/image07.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image06.html">Back<BR>06/27</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume6/image7.jpg"><IMG
 			 SRC="../images/normal/volume6/image07.jpg" WIDTH="750" HEIGHT="536"
-			 BORDER="0"></TD> 
+		  BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image08.html">Next<BR>08/27</A></TD> 
 		</TR> 
