--- a/qphotosupps/volume6/image15.html
+++ b/qphotosupps/volume6/image15.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image14.html">Back<BR>14/27</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume6/image15.jpg"><IMG
 			 SRC="../images/normal/volume6/image15.jpg" WIDTH="750" HEIGHT="490"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image16.html">Next<BR>16/27</A></TD> 
 		</TR> 
