--- a/qphotosupps/volume6/image27.html
+++ b/qphotosupps/volume6/image27.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image26.html">Back<BR>26/27</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume6/image27.jpg"><IMG
 			 SRC="../images/normal/volume6/image27.jpg" WIDTH="548" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"></TD> 
 		</TR> 
 		<TR> 
