--- a/qphotosupps/volume7/image01.html
+++ b/qphotosupps/volume7/image01.html
@@ -17,9 +17,9 @@
 		</TR> 
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume7/image1.jpg"><IMG
 			 SRC="../images/normal/volume7/image01.jpg" WIDTH="750" HEIGHT="599"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image02.html">Next<BR>02/28</A></TD> 
 		</TR> 
