--- a/qphotosupps/volume7/image04.html
+++ b/qphotosupps/volume7/image04.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image03.html">Back<BR>03/28</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume7/image4.jpg"><IMG
 			 SRC="../images/normal/volume7/image04.jpg" WIDTH="750" HEIGHT="523"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image05.html">Next<BR>05/28</A></TD> 
 		</TR> 
