--- a/qphotosupps/volume7/image05.html
+++ b/qphotosupps/volume7/image05.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image04.html">Back<BR>04/28</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume7/image5.jpg"><IMG
 			 SRC="../images/normal/volume7/image05.jpg" WIDTH="750" HEIGHT="555"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image06.html">Next<BR>06/28</A></TD> 
 		</TR> 
