--- a/qphotosupps/volume7/image06.html
+++ b/qphotosupps/volume7/image06.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image05.html">Back<BR>05/28</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume7/image6.jpg"><IMG
 			 SRC="../images/normal/volume7/image06.jpg" WIDTH="466" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image07.html">Next<BR>07/28</A></TD> 
 		</TR> 
