--- a/qphotosupps/volume7/image07.html
+++ b/qphotosupps/volume7/image07.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image06.html">Back<BR>06/28</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume7/image7.jpg"><IMG
 			 SRC="../images/normal/volume7/image07.jpg" WIDTH="750" HEIGHT="487"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image08.html">Next<BR>08/28</A></TD> 
 		</TR> 
