--- a/qphotosupps/volume7/image10.html
+++ b/qphotosupps/volume7/image10.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image09.html">Back<BR>09/28</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume7/image10.jpg"><IMG
 			 SRC="../images/normal/volume7/image10.jpg" WIDTH="750" HEIGHT="577"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image11.html">Next<BR>11/28</A></TD> 
 		</TR> 
