--- a/qphotosupps/volume7/image21.html
+++ b/qphotosupps/volume7/image21.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image20.html">Back<BR>20/28</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume7/image21.jpg"><IMG
 			 SRC="../images/normal/volume7/image21.jpg" WIDTH="750" HEIGHT="503"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image22.html">Next<BR>22/28</A></TD> 
 		</TR> 
