--- a/qphotosupps/volume7/image25.html
+++ b/qphotosupps/volume7/image25.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image24.html">Back<BR>24/28</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume7/image25.jpg"><IMG
 			 SRC="../images/normal/volume7/image25.jpg" WIDTH="466" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image26.html">Next<BR>26/28</A></TD> 
 		</TR> 
