--- a/qphotosupps/volume9/image04.html
+++ b/qphotosupps/volume9/image04.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image03.html">Back<BR>03/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image4.jpg"><IMG
 			 SRC="../images/normal/volume9/image04.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="516"></TD> 
+			 HEIGHT="516"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image05.html">Next<BR>05/22</A></TD> 
 		</TR> 
