--- a/qphotosupps/volume9/image07.html
+++ b/qphotosupps/volume9/image07.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image06.html">Back<BR>06/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image7.jpg"><IMG
 			 SRC="../images/normal/volume9/image07.jpg" BORDER="0" WIDTH="598"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image08.html">Next<BR>08/22</A></TD> 
 		</TR> 
