--- a/qphotosupps/volume9/image13.html
+++ b/qphotosupps/volume9/image13.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image12.html">Back<BR>12/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image13.jpg"><IMG
 			 SRC="../images/normal/volume9/image13.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="461"></TD> 
+			 HEIGHT="461"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image14.html">Next<BR>14/22</A></TD> 
 		</TR> 
