--- a/qphotosupps/volume9/image16.html
+++ b/qphotosupps/volume9/image16.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image15.html">Back<BR>15/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image16.jpg"><IMG
 			 SRC="../images/normal/volume9/image16.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="555"></TD> 
+			 HEIGHT="555"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image17.html">Next<BR>17/22</A></TD> 
 		</TR> 
