--- a/qphotosupps/volume9/image18.html
+++ b/qphotosupps/volume9/image18.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image17.html">Back<BR>17/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image18.jpg"><IMG
 			 SRC="../images/normal/volume9/image18.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="583"></TD> 
+			 HEIGHT="583"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image19.html">Next<BR>19/22</A></TD> 
 		</TR> 
