--- a/qphotosupps/volume9/image19.html
+++ b/qphotosupps/volume9/image19.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image18.html">Back<BR>18/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image19.jpg"><IMG
 			 SRC="../images/normal/volume9/image19.jpg" BORDER="0" WIDTH="749"
-			 HEIGHT="506"></TD> 
+			 HEIGHT="506"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image20.html">Next<BR>20/22</A></TD> 
 		</TR> 
