--- a/qphotosupps/volume9/image20.html
+++ b/qphotosupps/volume9/image20.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image19.html">Back<BR>19/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image20.jpg"><IMG
 			 SRC="../images/normal/volume9/image20.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="477"></TD> 
+			 HEIGHT="477"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image21.html">Next<BR>21/22</A></TD> 
 		</TR> 
