--- a/qphotosupps/volume9/image21.html
+++ b/qphotosupps/volume9/image21.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image20.html">Back<BR>20/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image21.jpg"><IMG
 			 SRC="../images/normal/volume9/image21.jpg" BORDER="0" WIDTH="553"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image22.html">Next<BR>22/22</A></TD> 
 		</TR> 
