--- a/qphotosupps/volume9/image22.html
+++ b/qphotosupps/volume9/image22.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image21.html">Back<BR>21/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image22.jpg"><IMG
 			 SRC="../images/normal/volume9/image22.jpg" BORDER="0" WIDTH="653"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"></TD> 
 		</TR> 
 		<TR> 
