--- a/qphotosupps/volume10/image02.html
+++ b/qphotosupps/volume10/image02.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image01.html">Back<BR>01/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image2.jpg"><IMG
 			 SRC="../images/normal/volume10/image02.jpg" BORDER="0" WIDTH="680"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image03.html">Next<BR>03/24</A></TD> 
 		</TR> 
