--- a/qphotosupps/volume10/image05.html
+++ b/qphotosupps/volume10/image05.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image04.html">Back<BR>04/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image5.jpg"><IMG
 			 SRC="../images/normal/volume10/image05.jpg" BORDER="0" WIDTH="443"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image06.html">Next<BR>06/24</A></TD> 
 		</TR> 
