--- a/qphotosupps/volume10/image06.html
+++ b/qphotosupps/volume10/image06.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image05.html">Back<BR>05/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image6.jpg"><IMG
 			 SRC="../images/normal/volume10/image06.jpg" BORDER="0" WIDTH="698"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image07.html">Next<BR>07/24</A></TD> 
 		</TR> 
