--- a/qphotosupps/volume10/image08.html
+++ b/qphotosupps/volume10/image08.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image07.html">Back<BR>07/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image8.jpg"><IMG
 			 SRC="../images/normal/volume10/image08.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="519"></TD> 
+			 HEIGHT="519"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image09.html">Next<BR>09/24</A></TD> 
 		</TR> 
