--- a/qphotosupps/volume10/image09.html
+++ b/qphotosupps/volume10/image09.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image08.html">Back<BR>08/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image9.jpg"><IMG
 			 SRC="../images/normal/volume10/image09.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="539"></TD> 
+			 HEIGHT="539"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image10.html">Next<BR>10/24</A></TD> 
 		</TR> 
