--- a/qphotosupps/volume10/image10.html
+++ b/qphotosupps/volume10/image10.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image09.html">Back<BR>09/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image10.jpg"><IMG
 			 SRC="../images/normal/volume10/image10.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="530"></TD> 
+			 HEIGHT="530"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image11.html">Next<BR>11/24</A></TD> 
 		</TR> 
