--- a/qphotosupps/volume10/image11.html
+++ b/qphotosupps/volume10/image11.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image10.html">Back<BR>10/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image11.jpg"><IMG
 			 SRC="../images/normal/volume10/image11.jpg" BORDER="0" WIDTH="749"
-			 HEIGHT="560"></TD> 
+			 HEIGHT="560"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image12.html">Next<BR>12/24</A></TD> 
 		</TR> 
