--- a/qphotosupps/volume10/image12.html
+++ b/qphotosupps/volume10/image12.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image11.html">Back<BR>11/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image12.jpg"><IMG
 			 SRC="../images/normal/volume10/image12.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="457"></TD> 
+			 HEIGHT="457"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image13.html">Next<BR>13/24</A></TD> 
 		</TR> 
