--- a/qphotosupps/volume10/image13.html
+++ b/qphotosupps/volume10/image13.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image12.html">Back<BR>12/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image13.jpg"><IMG
 			 SRC="../images/normal/volume10/image13.jpg" BORDER="0" WIDTH="540"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image14.html">Next<BR>14/24</A></TD> 
 		</TR> 
