--- a/qphotosupps/volume10/image22.html
+++ b/qphotosupps/volume10/image22.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image21.html">Back<BR>21/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image22.jpg"><IMG
 			 SRC="../images/normal/volume10/image22.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="598"></TD> 
+			 HEIGHT="598"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image23.html">Next<BR>23/24</A></TD> 
 		</TR> 
