--- a/qphotosupps/volume10/image24.html
+++ b/qphotosupps/volume10/image24.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image23.html">Back<BR>23/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image24.jpg"><IMG
 			 SRC="../images/normal/volume10/image24.jpg" BORDER="0" WIDTH="585"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"></TD> 
 		</TR> 
 		<TR> 
